# authd

./: .gitignore  Cargo.toml  README.md
src/: authd.rs  client.rs  error.rs  main.rs
