[package]
name = "authd"
version = "0.1.0"
authors = ["Karsten Jeschkies <k@jeschkies.xyz>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
crossbeam-channel = "0.3.8"
env_logger = "0.6"
jsonwebtoken = "6"
log = "0.4"
notify = "=5.0.0-pre.1"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.2"
